crates/psychevo-cli/src/snapshots/active_reasoning_write.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
assertion_line: 733
expression: combined
---
fixture=active_reasoning_write
size=120x24

--- text ---
› Write the report after reasoning.

⠋ Thinking                                                                                                           0s
  └ Let me compose the full report now. I have all the data. Let me write it out.

⠋ write /tmp/hackernews-hot-05-39.md
  └ Generating · 11 bytes · 1 line

    report body












────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
› Ask pevo...
mock/model  high  ⠋ 0s · Esc  ~/work · main

--- styles ---
[dim]› [default]Write the report after reasoning.
[default]
[cyan]⠋ [default]Thinking                                                                                                           [dim]0s[default]
[dim]  └ Let me compose the full report now. I have all the data. Let me write it out.[default]
[default]
[cyan]⠋ [default]write /tmp/hackernews-hot-05-39.md
[dim]  └ [default]Generating · 11 bytes · 1 line
[dim]    [default]
[dim]    [default]report body
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[dim]›[default] [dim]Ask pevo...[default]
[default]mock/model  [magenta]high[default]  [cyan]⠋[default] [dim]0s · [cyan]Esc[default]  [dim]~/work · main[default]
