crates/psychevo-cli/src/snapshots/active_visible_write_preamble.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
assertion_line: 678
expression: combined
---
fixture=active_visible_write_preamble
size=120x24

--- text ---
› Write the complete report.

Now I have all the data needed. Let me write the complete report.

⠋ Updating files                                                                                                     0s
















────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
› Ask pevo...
mock/model  high  ⠋ 0s · Esc  ~/work · main

--- styles ---
[dim]› [default]Write the complete report.
[default]
[default]Now I have all the data needed. Let me write the complete report.
[default]
[cyan]⠋ [default]Updating files                                                                                                     [dim]0s[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[dim]›[default] [dim]Ask pevo...[default]
[default]mock/model  [magenta]high[default]  [cyan]⠋[default] [dim]0s · [cyan]Esc[default]  [dim]~/work · main[default]
