crates/psychevo-cli/src/snapshots/active_write_after_visible_answer.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
assertion_line: 667
expression: combined
---
fixture=active_write_after_visible_answer
size=120x24

--- text ---
› Write the report after collecting data.

Now I have all the data I need. Let me write the full report:

◦ Updating /tmp/hackernews-hot-05-15.md                                                                              0s
















────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
› Ask pevo...
mock/model  high  • 0s · Esc  ~/work · main

--- styles ---
[dim]› [default]Write the report after collecting data.
[default]
[default]Now I have all the data I need. Let me write the full report:
[default]
[cyan]◦ [default]Updating /tmp/hackernews-hot-05-15.md                                                                              [dim]0s[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[dim]›[default] [dim]Ask pevo...[default]
[default]mock/model  [magenta]high[default]  [cyan]•[default] [dim]0s · [cyan]Esc[default]  [dim]~/work · main[default]
