crates/psychevo-cli/src/snapshots/active_write_suppresses_failure_meta.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
assertion_line: 612
expression: combined
---
fixture=active_write_suppresses_failure_meta
size=120x18

--- text ---
• Ran command                                                                                                        0s
  └ failed

Now let me write the full report:

◦ Changing files                                                                                                     2s








────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
› Ask pevo...

mock/model  high  ◦ 0s · Esc

--- styles ---
[red]• Ran command[default]                                                                                                        [dim]0s[default]
[dim]  └ [red]failed[default]
[default]
[default]Now let me write the full report:
[default]
[cyan]◦ [default]Changing files                                                                                                     [dim]2s[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[dim]›[default] [dim]Ask pevo...[default]
[default]
[default]mock/model  [magenta]high[default]  [cyan]◦[default] [dim]0s · [cyan]Esc[default]
