crates/psychevo-cli/src/snapshots/archived_session_action_bottom_panel.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
expression: combined
---
fixture=archived_session_action_bottom_panel
size=120x24

--- text ---






────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

  Archived Sessions                                                                                                esc
  Search
  repo
  ›   Archived refactor branch  /repo  mock/mock-model  messages=7                                    2026-05-01 18:22

  action: R restore  D delete
  R restore  D delete  Esc cancel








mock/model  high  ~/work · main

--- styles ---
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[default]
[default]  [dim]Archived Sessions[default]                                                                                                [dim]esc[default]
[default]  [dim]Search [default]
[default]  [cyan]repo[default]
[default]  [cyan]›   Archived refactor branch  /repo  mock/mock-model  messages=7                                    2026-05-01 18:22[default]
[default]
[default]  [dim]action: R restore  D delete[default]
[default]  [dim]R restore  D delete  Esc cancel[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]mock/model  [magenta]high[default]  [dim]~/work · main[default]
