crates/psychevo-cli/src/snapshots/clarify_answered_result.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
expression: combined
---
fixture=clarify_answered_result
size=120x24

--- text ---
· Questions 3/3 answered
  └ Which mode should we use?
    answer: Fast (Recommended)
    note: include tests
    How much detail should the answer include?
    answer: Brief
    Which output format should be used?
    answer: Markdown













────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
› Ask pevo...
mock/model  high  ~/work · main

--- styles ---
[dim]· [default]Questions 3/3 answered
[dim]  └ Which mode should we use?[default]
[dim]    answer: Fast (Recommended)[default]
[dim]    note: include tests[default]
[dim]    How much detail should the answer include?[default]
[dim]    answer: Brief[default]
[dim]    Which output format should be used?[default]
[dim]    answer: Markdown[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[dim]›[default] [dim]Ask pevo...[default]
[default]mock/model  [magenta]high[default]  [dim]~/work · main[default]
