crates/psychevo-cli/src/snapshots/clarify_declined_result.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
expression: combined
---
fixture=clarify_declined_result
size=120x24

--- text ---
· Questions 0/3 answered
  └ Which mode should we use? (unanswered)
    How much detail should the answer include? (unanswered)
    Which output format should be used? (unanswered)

















────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
› Ask pevo...
mock/model  high  ~/work · main

--- styles ---
[dim]· [default]Questions 0/3 answered
[dim]  └ Which mode should we use? (unanswered)[default]
[dim]    How much detail should the answer include? (unanswered)[default]
[dim]    Which output format should be used? (unanswered)[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[dim]›[default] [dim]Ask pevo...[default]
[default]mock/model  [magenta]high[default]  [dim]~/work · main[default]
