crates/psychevo-cli/src/snapshots/clarify_other_inline.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
expression: combined
---
fixture=clarify_other_inline
size=120x24

--- text ---












────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

  Question 1/3 (3 unanswered)
  Which mode should we use?

    1. Fast (Recommended)  Prioritize speed
    2. Careful  Prioritize review
  › 3. Other  answer: custom path

  tab to edit note/custom answer | enter to submit answer | ←/→ to navigate questions | esc to interrupt

mock/model  high  ~/work · main

--- styles ---
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[default]
[default]  [dim]Question 1/3 (3 unanswered)[default]
[default]  [cyan]Which mode should we use?[default]
[default]
[default]  [dim]  1. [default]Fast [cyan](Recommended)[dim]  Prioritize speed[default]
[default]  [dim]  2. [default]Careful[dim]  Prioritize review[default]
[default]  [dim]› 3. [cyan]Other[dim]  answer: [default]custom path
[default]
[default]  [dim]tab to edit note/custom answer | enter to submit answer | ←/→ to navigate questions | esc to interrupt[default]
[default]
[default]mock/model  [magenta]high[default]  [dim]~/work · main[default]
