crates/psychevo-cli/src/snapshots/clarify_question_panel.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
expression: combined
---
fixture=clarify_question_panel
size=120x24

--- text ---












────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

  Question 1/3 (3 unanswered)
  Which mode should we use?

  › 1. Fast (Recommended)  Prioritize speed
    2. Careful  Prioritize review
    3. Other  Type a custom answer

  tab to edit note/custom answer | enter to submit answer | ←/→ to navigate questions | esc to interrupt

mock/model  high  ~/work · main

--- styles ---
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[default]
[default]  [dim]Question 1/3 (3 unanswered)[default]
[default]  [cyan]Which mode should we use?[default]
[default]
[default]  [dim]› 1. [cyan]Fast (Recommended)[dim]  [cyan]Prioritize speed[default]
[default]  [dim]  2. [default]Careful[dim]  Prioritize review[default]
[default]  [dim]  3. [default]Other[dim]  Type a custom answer[default]
[default]
[default]  [dim]tab to edit note/custom answer | enter to submit answer | ←/→ to navigate questions | esc to interrupt[default]
[default]
[default]mock/model  [magenta]high[default]  [dim]~/work · main[default]
