crates/psychevo-cli/src/snapshots/collapsed_long_json_tool_output.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
assertion_line: 670
expression: combined
---
fixture=collapsed_long_json_tool_output
size=120x18

--- text ---
› Inspect cached HN comments.

• Ran sqlite3 feeds/.cache/hn.db                                                                          ▸ more output
  └ {"comments":[{"id":48070001,"by":"user1","text":"identity verification discussion identity verification discussion
"},{"id":48070002,"by":"user2","text":"identity verification discussion identity verification discussion
"},{"id":48070003,"by":"user3","text":"identity verification discussion identity verification discussion
"},{"id":48070004,"by":"user4","text":"identity verification discuss…cussion identity verification discussion
"},{"id":48070026,"by":"user26","text":"identity verification discussion identity verification discussion
"},{"id":48070027,"by":"user27","text":"identity verification discussion identity verification discussion
"},{"id":48070028,"by":"user28","text":"identity verification discussion identity verification discussion
"},{"id":48070029,"by":"user29","text":"identity verification discussion identity verification discussion
"},{"id":48070030,"by":"user30","text":"identity verification discussion identity verification discussion
"},{"id":48070031,"by":"user31","text":"identity verification discussion identity verification discussion
"},{"id":48070032,"by":"user32","text":"identity verification discussion identity verification discussion "}]}

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
› Ask pevo...
mock/model  high  ~/work · main

--- styles ---
[dim]› [default]Inspect cached HN comments.
[default]
[green]• [default]Ran sqlite3 feeds/.cache/hn.db                                                                          [dim]▸ more output[default]
[dim]  └ [default]{"comments":[{"id":48070001,"by":"user1","text":"identity verification discussion identity verification discussion
[default]"},{"id":48070002,"by":"user2","text":"identity verification discussion identity verification discussion
[default]"},{"id":48070003,"by":"user3","text":"identity verification discussion identity verification discussion
[default]"},{"id":48070004,"by":"user4","text":"identity verification discuss…cussion identity verification discussion
[default]"},{"id":48070026,"by":"user26","text":"identity verification discussion identity verification discussion
[default]"},{"id":48070027,"by":"user27","text":"identity verification discussion identity verification discussion
[default]"},{"id":48070028,"by":"user28","text":"identity verification discussion identity verification discussion
[default]"},{"id":48070029,"by":"user29","text":"identity verification discussion identity verification discussion
[default]"},{"id":48070030,"by":"user30","text":"identity verification discussion identity verification discussion
[default]"},{"id":48070031,"by":"user31","text":"identity verification discussion identity verification discussion
[default]"},{"id":48070032,"by":"user32","text":"identity verification discussion identity verification discussion "}]}
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[dim]›[default] [dim]Ask pevo...[default]
[default]mock/model  [magenta]high[default]  [dim]~/work · main[default]
