crates/psychevo-cli/src/snapshots/completed_ledger_collapsed_tool_output.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
expression: combined
---
fixture=completed_ledger_collapsed_tool_output
size=120x24

--- text ---
› Summarize the TUI snapshot harness.

• Thinking
  └ Check layout boundaries, style roles, and expandable evidence.

• read crates/psychevo-cli/src/tui.rs                                                                   ▸ 18 more lines
  └ 01: crates/psychevo-cli/src/tui.rs evidence row
    02: crates/psychevo-cli/src/tui.rs evidence row
    ... 18 more lines
    21: crates/psychevo-cli/src/tui.rs evidence row
    22: crates/psychevo-cli/src/tui.rs evidence row
    23: crates/psychevo-cli/src/tui.rs evidence row
    24: crates/psychevo-cli/src/tui.rs evidence row

The harness snapshots stable buffer text and style roles, then leaves real terminal screenshots as diagnostics.
▌ mock/mock-model high  2s





────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
› Ask pevo...
mock/model  high  ~/work · main

--- styles ---
[dim]› [default]Summarize the TUI snapshot harness.
[default]
[green]• [default]Thinking
[dim]  └ Check layout boundaries, style roles, and expandable evidence.[default]
[default]
[green]• [default]read crates/psychevo-cli/src/tui.rs                                                                   [dim]▸ 18 more lines[default]
[dim]  └ [default]01: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]02: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]... 18 more lines
[dim]    [default]21: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]22: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]23: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]24: crates/psychevo-cli/src/tui.rs evidence row
[default]
[default]The harness snapshots stable buffer text and style roles, then leaves real terminal screenshots as diagnostics.
[dim]▌ mock/mock-model high  2s[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[dim]›[default] [dim]Ask pevo...[default]
[default]mock/model  [magenta]high[default]  [dim]~/work · main[default]
